// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Input / Textarea Actions 1`] = `
Array [
  <p>
    Actions are a bit laggy because of the @storybook/addon-actions. Prod performance is not affected.
  </p>,
  .c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
    className="c0"
  >
    <label
      className="c1"
      hidden={false}
    >
      <span
        className="c2"
      >
        <div
          className="c3"
        >
          Label 
        </div>
        <span
          className="c4"
        >
          <textarea
            className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Storyshots Molecules / Input / Textarea Default 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <textarea
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          placeholder="Placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea Disabled 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #EBEBE8;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <textarea
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          disabled={true}
          placeholder="Placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea Edge cases 1`] = `
.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c9:hover {
  border-color: #4B4B46;
}

.c9:focus {
  border-color: #0046FF;
}

.c9::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c9::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c9:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c9::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c9:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c9:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c9:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c9:disabled::placeholder {
  color: #A0A09B;
}

.c4 {
  width: 200px;
  display: inline-block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Long values
      </span>
    </div>
    <div>
      <div
        className="c4"
      >
        <label
          className="c5"
          hidden={false}
        >
          <span
            className="c6"
          >
            <div
              className="c7"
            >
              Too long label, goes into ellipsis. Consider smaller label or bigger input 
            </div>
            <span
              className="c8"
            >
              <textarea
                className="NormalizedTextarea__Textarea-sc-i5on9-0 c9"
                placeholder="If placeholder goes too long though, it probably should be truncated into ellipsis, right?"
                rows={3}
              />
            </span>
          </span>
        </label>
        <div>
          <span
            className="c10"
          >
            This is much necessary info wow
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Long extraInfo
      </span>
    </div>
    <div>
      <div
        className="c4"
      >
        <label
          className="c5"
          hidden={false}
        >
          <span
            className="c6"
          >
            <div
              className="c7"
            >
              Small label 
            </div>
            <span
              className="c8"
            >
              <textarea
                className="NormalizedTextarea__Textarea-sc-i5on9-0 c9"
                placeholder=""
                rows={3}
              />
            </span>
          </span>
        </label>
        <div>
          <span
            className="c10"
          >
            Big extra fat extraInfo that will wrap over many lines. Be careful with this pattern, use it only with small texts!
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea Error if empty text 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #FF1900;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        My awesome text field 
      </div>
      <span
        className="c4"
      >
        <textarea
          aria-invalid={true}
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          onChange={[Function]}
          placeholder="This is a placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
  <div>
    <span
      className="c6"
    >
      <div
        className="c7"
      >
        Error: 
      </div>
      Something went wrong
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea Extra info below 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <textarea
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          placeholder="Placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
  <div>
    <span
      className="c6"
    >
      Use this space wisely
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea Extra info with error 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #FF1900;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        My awesome text field 
      </div>
      <span
        className="c4"
      >
        <textarea
          aria-invalid={true}
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          onChange={[Function]}
          placeholder="This is a placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
  <div>
    <span
      className="c6"
    >
      <div
        className="c7"
      >
        Error: 
      </div>
      Enter text
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea Full width 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 100%;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <textarea
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          placeholder="Placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea Hidden label 1`] = `
.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <textarea
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          placeholder="Placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea On a coloured background 1`] = `
.c0 {
  padding: 20px;
  background-color: #EBEBE8;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c6::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c6:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c6::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c6:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c6:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c6:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c6:disabled::placeholder {
  color: #A0A09B;
}

.c1 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
      hidden={false}
    >
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          On a colored background 
        </div>
        <span
          className="c5"
        >
          <textarea
            className="NormalizedTextarea__Textarea-sc-i5on9-0 c6"
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea Required 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Required
    </span>
  </div>,
  .c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c9:hover {
  border-color: #4B4B46;
}

.c9:focus {
  border-color: #0046FF;
}

.c9::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c9::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c9:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c9::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c9:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c9:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c9:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c9:disabled::placeholder {
  color: #A0A09B;
}

.c4 {
  width: 200px;
  display: inline-block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          Default (without star)
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <label
            className="c5"
            hidden={false}
          >
            <span
              className="c6"
            >
              <div
                className="c7"
              >
                Label 
              </div>
              <span
                className="c8"
              >
                <textarea
                  className="NormalizedTextarea__Textarea-sc-i5on9-0 c9"
                  placeholder="Placeholder"
                  required={true}
                  rows={3}
                />
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          With star
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <label
            className="c5"
            hidden={false}
          >
            <span
              className="c6"
            >
              <div
                className="c7"
              >
                Label *
              </div>
              <span
                className="c8"
              >
                <textarea
                  className="NormalizedTextarea__Textarea-sc-i5on9-0 c9"
                  placeholder="Placeholder"
                  required={true}
                  rows={3}
                />
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
  background-color: transparent;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules / Input / Textarea Specific width 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 400px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <textarea
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          placeholder="Placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea Success 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #00D200;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <textarea
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          placeholder="Placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea With auto focus 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <textarea
          autoFocus={true}
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          placeholder="Placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea With default value (Uncontrolled behaviour) 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <textarea
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          defaultValue="Some predefined text"
          placeholder="Placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea With tooltip (position top) as label addon 1`] = `
Array [
  <br />,
  <br />,
  .c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  stroke: #6E6E69;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c8::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c8:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c8:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c8:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c8:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  margin-left: 4px;
}

<div
    className="c0"
  >
    <label
      className="c1"
      hidden={false}
    >
      <span
        className="c2"
      >
        <div
          className="c3"
        >
          Label 
          <svg
            aria-hidden="true"
            className="c4 c5"
            focusable="false"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <g
              fillRule="evenodd"
              transform="translate(1 1)"
            >
              <circle
                className="c6"
                cx="11"
                cy="11"
                fill="none"
                r="11"
              />
              <path
                d="M9.4544,13.5528 L9.4544,13.3008 C9.4544,12.1584 9.4376,11.6376 11.1512,10.2432 C11.8904,9.6384 12.4784,9.2184 12.4784,8.496 C12.4784,7.8576 12.0248,7.3536 11.1176,7.3536 C10.1768,7.3536 9.656,7.9416 9.4376,8.6472 L6.9008,8.6472 C7.2368,6.3624 8.9504,5.1696 11.168,5.1696 C13.5032,5.1696 15.0992,6.4128 15.0992,8.3784 C15.0992,9.6888 14.5448,10.3776 13.0496,11.6544 C12.344,12.2424 11.84,12.6456 11.7056,13.3008 L11.6552,13.5528 L9.4544,13.5528 Z M11.9072,14.7288 L11.9072,17.4 L9.2696,17.4 L9.2696,14.7288 L11.9072,14.7288 Z"
                fillRule="nonzero"
              />
            </g>
          </svg>
        </div>
        <span
          className="c7"
        >
          <textarea
            className="NormalizedTextarea__Textarea-sc-i5on9-0 c8"
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Storyshots Molecules / Input / Textarea With tooltip as label addon 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  stroke: #6E6E69;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c8::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c8:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c8:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c8:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c8:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c5 {
  margin-left: 4px;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
        <svg
          aria-hidden="true"
          className="c4 c5"
          focusable="false"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <g
            fillRule="evenodd"
            transform="translate(1 1)"
          >
            <circle
              className="c6"
              cx="11"
              cy="11"
              fill="none"
              r="11"
            />
            <path
              d="M9.4544,13.5528 L9.4544,13.3008 C9.4544,12.1584 9.4376,11.6376 11.1512,10.2432 C11.8904,9.6384 12.4784,9.2184 12.4784,8.496 C12.4784,7.8576 12.0248,7.3536 11.1176,7.3536 C10.1768,7.3536 9.656,7.9416 9.4376,8.6472 L6.9008,8.6472 C7.2368,6.3624 8.9504,5.1696 11.168,5.1696 C13.5032,5.1696 15.0992,6.4128 15.0992,8.3784 C15.0992,9.6888 14.5448,10.3776 13.0496,11.6544 C12.344,12.2424 11.84,12.6456 11.7056,13.3008 L11.6552,13.5528 L9.4544,13.5528 Z M11.9072,14.7288 L11.9072,17.4 L9.2696,17.4 L9.2696,14.7288 L11.9072,14.7288 Z"
              fillRule="nonzero"
            />
          </g>
        </svg>
      </div>
      <span
        className="c7"
      >
        <textarea
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c8"
          placeholder="Placeholder"
          rows={3}
        />
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Textarea With value (Controlled behaviour) 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  vertical-align: top;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c5::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c5:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c5:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c5:disabled::placeholder {
  color: #A0A09B;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <textarea
          className="NormalizedTextarea__Textarea-sc-i5on9-0 c5"
          placeholder="Placeholder"
          rows={3}
          value="Some predefined text"
        />
      </span>
    </span>
  </label>
</div>
`;
